fixed whitespace in background image

--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,6 @@ header {
     padding: 20px 20px 0 20px;
     background: -webkit-linear-gradient(top, #88bfe8 0%,#70b0e0 100%);
     border-bottom: 1px solid black;
-    margin-bottom: 25px;
 }
 
 footer {
